fix: dashboard content overflow on smaller (in height) screens

--- a/app/account/Account.module.sass
+++ b/app/account/Account.module.sass
@@ -1,6 +1,6 @@
 div.content
     width: 100%
-    height: 100%
+    min-height: 100%
     display: flex
     align-items: center
     justify-content: center
